# hiring-agents

./: README.md  airtable.py  cv_scoring.py  main.py  pyproject.toml  routes.py
src/algorithms/: base.py  elo.py
src/hiring_agents/: crew.py  main.py  orchestration.py
src/hiring_agents/config/: agents.yaml  simple_prompt.md  tasks.yaml
src/prompts/: cv_weighted_prompt.md  pairwise_pro.md  pairwise_ranking.md
utils/: llm_wrapper.py  pairwise_ranking.py  pdf_utils.py  preprocess.py
