[project]
name = "hiring_agents"
version = "0.1.0"
description = "hiring-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "fastapi>=0.115.12",
    "nltk>=3.9.1",
    "pyairtable>=3.1.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.1",
]

[project.scripts]
hiring_agents = "hiring_agents.main:run"
run_crew = "hiring_agents.main:run"
train = "hiring_agents.main:train"
replay = "hiring_agents.main:replay"
test = "hiring_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
